логотип и стрелочка "погода", заготовки

--- a/app/modules/layout/layout.html
+++ b/app/modules/layout/layout.html
@@ -5,6 +5,15 @@
     <title>ШРИ [team4]</title>
 </head>
 <body>
-    <div class="layout"></div>
+    <div class="layout">
+        <img src="logo.png" alt="" class="layout__logo">
+        <div class="layout__search">
+            <div class="layout__search__label">
+                <a href="#" class="layout__search__label__link">Погода</a>
+            </div>
+            <input class="layout__search__input" type="text">
+            <button class="layout__search__button">Найти</button>
+        </div>
+    </div>
 </body>
 </html>
