--- a/src/base.scss
+++ b/src/base.scss
@@ -15,7 +15,7 @@ body
     min-width: 600px;
     padding: 0;
 
-    text-align: left: ft;
+    text-align: left;
 
     color: #000;
     background: #fff;
