--- a/src/base.scss
+++ b/src/base.scss
@@ -1,116 +1,3 @@
-html,
-body,
-h1,
-h2,
-img,
-table
-{
-    margin: 0;
-}
-
-body
-{
-    font: 400 13px Arial, Helvetica, sans-serif;
-
-    min-width: 600px;
-    padding: 0;
-
-    text-align: left;
-
-    color: #000;
-    background: #fff;
-}
-
-h1
-{
-    font: 400 36px Verdana, Helvetica, sans-serif;
-
-    margin: 0 0 40px;
-    padding: 0 0 10px;
-
-    text-align: right;
-
-    border-bottom: 4px solid #fc3;
-}
-
-h1 span
-{
-    color: #f00;
-}
-
-h2
-{
-    font: 700 20px Tahoma, Geneva, sans-serif;
-
-    margin: 40px 0 20px;
-    padding-bottom: 11px;
-}
-
-h2 span
-{
-    color: #f00;
-}
-
-table
-{
-    overflow: hidden;
-
-    width: 100%;
-    margin: 10px 0;
-
-    border-spacing: 2px;
-
-    text-align: center;
-
-    border: 2px solid #fc3;
-}
-
-thead tr
-{
-    font-size: 11px;
-    font-weight: 700;
-
-    color: #f30;
-    background: #fc3;
-}
-
-th,
-td
-{
-    padding: 10px;
-}
-
-.layout
-{
-    margin: 18px 24px 0;
-}
-
-.button
-{
-    font-size: 13px;
-
-    display: inline-block;
-
-    padding: 7px 14px;
-
-    text-decoration: none;
-
-    color: #000;
-    border: 1px solid rgba(0,0,0,.25);
-    border-radius: 3px;
-}
-
-.button:not(.button-active):hover
-{
-    background: linear-gradient(#fff 0%, #eee 100%);
-}
-
-.button:hover
-{
-    box-shadow: 0 1px 0 rgba(0, 0, 0, .3);
-}
-
-.button-active
-{
-    background-color: #ffeaae;
-}
+@import '_reset.scss';
+@import '_layout.scss';
+@import '_now.scss';
