--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -16,6 +16,7 @@
     color: #000;
     border: 1px solid rgba(0,0,0,.25);
     border-radius: 3px;
+    background-color: #fff;
 }
 
 .button:not(.button-active):hover
@@ -25,6 +26,8 @@
 
 .button:hover
 {
+    cursor: pointer;
+
     box-shadow: 0 1px 0 rgba(0, 0, 0, .3);
 }
 
