button-search border fix

--- a/src/_header.scss
+++ b/src/_header.scss
@@ -92,8 +92,8 @@
     font-size: 15px;
 
     height: 35px;
+    margin-left: -1px;
 
-    border-left: none;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
