--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -15,7 +15,7 @@
 
     color: #000;
     border: 1px solid rgba(0,0,0,.25);
-    border-radius: 3px;
+    /*border-radius: 3px;*/
 }
 
 .button:not(.button-active):hover
