--- a/src/_forecast_tabs.scss
+++ b/src/_forecast_tabs.scss
@@ -1,15 +1,37 @@
+.tabs
+{
+    margin: 10px 0;
+}
+
 .tabs__tab
 {
     border-radius: 0;
-    margin: 0 -2px;
+    float: left;
+
 }
 
-.tabs__tab_left_radius
+.tabs__tab_middle
+{
+    border-right: none;
+}
+
+.tabs__tab_left
 {
     border-radius: 3px 0 0 3px;
+    border-right: none;
 }
 
-.tabs__tab_right_radius
+.tabs__tab_right
 {
     border-radius: 0 3px 3px 0;
+}
+
+.button-active
+{
+    border: $border-button;
+}
+
+.button-active + .tabs__tab
+{
+    border-left: none;
 }
