--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -1,3 +1,5 @@
+$border-button: 1px solid rgba(0, 0, 0, .25);
+
 .layout
 {
     margin: 18px 24px 0;
@@ -14,7 +16,7 @@
     text-decoration: none;
 
     color: #000;
-    border: 1px solid rgba(0,0,0,.25);
+    border: $border-button;
     border-radius: 3px;
     background-color: #fff;
 }
