background transparent -> none

--- a/src/_forecast_full.scss
+++ b/src/_forecast_full.scss
@@ -5,7 +5,7 @@
 
     &__header {
         &-row {
-            background: transparent;
+            background: none;
         }
 
         &-title {
