--- a/src/base.scss
+++ b/src/base.scss
@@ -6,5 +6,5 @@
 @import '_forecast_tabs';
 @import '_forecast_full';
 @import '_forecast_short';
-@import "_forecast_hours";
+@import '_forecast_hours';
 @import '_direct';
