--- a/src/base.scss
+++ b/src/base.scss
@@ -1,6 +1,7 @@
 @import '_reset';
 @import '_layout';
 @import '_now';
+@import '_temperature';
 @import '_header';
 @import '_city-select';
 @import '_forecast_tabs';
