--- a/src/_city-select.scss
+++ b/src/_city-select.scss
@@ -10,6 +10,7 @@ $spritePath: '../images/city-select-sprite.png';
 .city-select
 {
     position: relative;
+    padding-left: 10px;
 }
 
 .city-select__city-name
