--- a/src/templates/forecast_short.hbs
+++ b/src/templates/forecast_short.hbs
@@ -1,15 +1,27 @@
 <div class="forecast_short__day">
-    <div class="forecast_short__weekday">завтра</div>
-    <div class="forecast_short__date">22 августа</div>
+    <div class="forecast_short__weekday">
+        {{#if model.isTomorrow}}
+            завтра
+        {{else}}
+            {{datef 'D' model.date}}
+        {{/if}}
+    </div>
+    <div class="forecast_short__date">
+        {{#if model.isTomorrow}}
+            {{datef 'dd MMMM' model.date}}
+        {{else}}
+            {{datef 'dd' model.date}}
+        {{/if}}
+    </div>
     <div class="forecast_short__weather-box">
-        <img class="forecast_short__weather-icon" src="http://ekb.shri14.ru/icons/bkn_d.svg">
+        <img class="forecast_short__weather-icon" src="{{weatherIcon }}">
         <div class="forecast_short__weather-text">облачно с прояснениями, небольшой дождь</div>
         <div class="forecast_short__weather-temp">+20</div>
     </div>
     <div class="forecast_short__weather-temp-night">+8</div>
 </div>
 
-<div class="forecast_short__day">
+<!--<div class="forecast_short__day">
     <div class="forecast_short__weekday forecast_short__weekday-weekend">сб</div>
     <div class="forecast_short__date forecast_short__date-weekend">23</div>
     <div class="forecast_short__weather-box">
@@ -40,4 +52,4 @@
         <div class="forecast_short__weather-temp">+20</div>
     </div>
     <div class="forecast_short__weather-temp-night">+8</div>
-</div>
+</div>-->
