--- a/src/templates/forecast_full_day.hbs
+++ b/src/templates/forecast_full_day.hbs
@@ -8,8 +8,8 @@
 </thead>
 <tbody>
     <tr class="forecast_full__daytime">
-        <td class="forecast_full__weekday" rowspan="4">вс</td>
-        <td class="forecast_full__date" rowspan="4"><div class="forecast_full__date-day">28</div>
+        <td class="forecast_full__weekday" rowspan="4">{{ model.day_of_week }}</td>
+        <td class="forecast_full__date" rowspan="4"><div class="forecast_full__date-day">{{datef 'd' model.date }}</div>
             <div class="forecast_full__date-month">октября</div>
         </td>
         <td>
