TabsViews Динамически через шаблон

--- a/src/templates/tabs.hbs
+++ b/src/templates/tabs.hbs
@@ -1,3 +1,19 @@
 {{#each .}}
-    <a href="#{{link}}" class="button tabs__tab tabs__tab_{{#if @first}}left{{else}}{{#if @last}}right{{else}}middle{{/if}}{{/if}}{{#if class}} {{class}}{{/if}}">{{title}}</a>
+    <a href="#{{link}}" class="button tabs__tab tabs__tab_
+        {{~#if @first~}}
+            left
+        {{else}}
+            {{~#if @last~}}
+                right
+            {{~else~}}
+                middle
+            {{/if}}
+        {{/if}}
+        {{#if class}}
+            {{class}}
+        {{/if}}
+        {{#ifCond link ../tab}}
+            button-active
+        {{/ifCond}}
+    ">{{title}}</a>
 {{/each}}
