dirty css hack short forecast

--- a/src/styles/_forecast_short.scss
+++ b/src/styles/_forecast_short.scss
@@ -1,4 +1,9 @@
 .forecast_short {
+
+    position: relative;
+    display: block;
+    margin-top: 60px;
+
     &__day {
         float: left;
         width: 106px;
