переключение табов, убран плейсхолдер для почасового показа, быстрый фикс стилей

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -37,3 +37,9 @@ $border-button: 1px solid rgba(0, 0, 0, .25);
 {
     background-color: #ffeaae;
 }
+
+.forecast {
+    display: block;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
