--- a/src/templates/tabs.hbs
+++ b/src/templates/tabs.hbs
@@ -1,5 +1,5 @@
 {{#each tabs}}
-    <a href="/{{../state.locality}}/{{link}}" class="button tabs__tab tabs__tab_
+    <a href="/{{../state.geoid}}/{{link}}" class="button tabs__tab tabs__tab_
         {{~#if @first~}}
             left
         {{else}}
