--- a/src/styles/_forecast_hours.scss
+++ b/src/styles/_forecast_hours.scss
@@ -9,7 +9,8 @@
 }
 
 .forecast_hours__svg_axis path,
-.forecast_hours__svg_axis line {
+.forecast_hours__svg_axis line
+{
     fill: none;
     stroke: #000;
     shape-rendering: crispEdges;
