рефаторинг табов, фиксы автоопределения города

--- a/src/templates/forecast_tabs.hbs
+++ b/src/templates/forecast_tabs.hbs
@@ -1,5 +1,5 @@
 {{#each tabs}}
-    <a href="/{{../state.geoid}}/{{link}}" class="button tabs__tab tabs__tab_
+    <a data-tab="{{link}}" class="button tabs__tab tabs__tab_
         {{~#if @first~}}
             left
         {{else}}
