--- a/src/templates/now.hbs
+++ b/src/templates/now.hbs
@@ -5,10 +5,10 @@
                                     <div class="current-weather_title">Сейчас</div>
                                     <div class="current-weather_content temp-color_30">
                                         <div class="current-weather_column-container">
-                                            <div class="current-weather_temp-value">+30 &deg;C</div>
+                                            <div class="current-weather_temp-value">{{parts.0.temp}} &deg;C</div>
                                             <div class="current-weather_icon">
                                                 <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
-                                                <div class="current-weather_icon__text">малооблачно</div>
+                                                <div class="current-weather_icon__text">{{parts.0.weather}}</div>
 
                                             </div>
                                         </div>
@@ -18,7 +18,7 @@
                                     <div class="current-weather_title">Днем</div>
                                     <div class="current-weather_content temp-color_15">
                                         <div class="current-weather_column-container">
-                                            <div class="current-weather_temp-value">+15 &deg;C</div>
+                                            <div class="current-weather_temp-value">{{parts.1.temp}} &deg;C</div>
                                             <div class="current-weather_icon">
                                                 <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
                                             </div>
@@ -29,7 +29,7 @@
                                     <div class="current-weather_title">Вечером</div>
                                     <div class="current-weather_content temp-color_4">
                                         <div class="current-weather_column-container">
-                                            <div class="current-weather_temp-value">+4 &deg;C</div>
+                                            <div class="current-weather_temp-value">{{parts.2.temp}} &deg;C</div>
                                             <div class="current-weather_icon">
                                                 <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
                                             </div>
@@ -40,7 +40,7 @@
                                     <div class="current-weather_title">Ночью</div>
                                     <div class="current-weather_content temp-color_-2">
                                         <div class="current-weather_column-container">
-                                            <div class="current-weather_temp-value">-2 &deg;C</div>
+                                            <div class="current-weather_temp-value">{{parts.3.temp}} &deg;C</div>
                                             <div class="current-weather_icon">
                                                 <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
                                             </div>
