--- a/src/templates/city_select.hbs
+++ b/src/templates/city_select.hbs
@@ -1,4 +1,4 @@
-<div class="city-select__city-name">{{ locality.name }}</div>
+`<div class="city-select__city-name">{{ locality.name }}</div>
 <div class="city-select__city-dropdown-group">
     <div class="city-select__city-other button">Другой город</div>
     <div class="city-select__city-dropdown">
@@ -6,7 +6,7 @@
         <ul class="city-select__recent-list">
             {{#each recent}}
                 <li class="city-select__recent-list-element">
-                    <a href="#" class="city-select__recent-list-link{{#ifCond geoid ../locality.geoid}} city-select__recent-list-link_active{{/ifCond}}">
+                    <a href="#" data-geoid="{{geoid}}" class="city-select__recent-list-link{{#ifCond geoid ../locality.geoid}} city-select__recent-list-link_active{{/ifCond}}">
                         {{~ name ~}}
                     </a>
                 </li>
