--- a/src/templates/now.hbs
+++ b/src/templates/now.hbs
@@ -65,5 +65,5 @@
                         </div>
                     </div>
                     <div class="current-weather_footer">
-                        Вчера +10 &deg;
+                        Вчера {{yesterday_temp}} &deg;
                     </div>
