--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -20,14 +20,10 @@ body
 
 h1
 {
-    font: 400 36px Verdana, Helvetica, sans-serif;
+    font: 400 36px Arial, Helvetica, sans-serif;
 
     margin: 0 0 40px;
     padding: 0 0 10px;
-
-    text-align: right;
-
-    border-bottom: 4px solid #fc3;
 }
 
 h1 span
