--- a/src/templates/city_select.hbs
+++ b/src/templates/city_select.hbs
@@ -1,4 +1,4 @@
-`<div class="city-select__city-name">Погода {{ locality.nameprep }}</div>
+<h1 class="city-select__city-name">Погода {{ locality.nameprep }}</h1>
 <div class="city-select__city-dropdown-group">
     <div class="city-select__city-other button">Другой город</div>
     <div class="city-select__city-dropdown">
