фиксы отступов у табов, один общий отступ у контейнера

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -41,5 +41,5 @@ $border-button: 1px solid rgba(0, 0, 0, .25);
 .forecast {
     display: block;
     overflow: hidden;
-    margin-bottom: 30px;
+    margin: 25px 0;
 }
